Slides 08: EKF-SLAM: fix algorithm

--- a/teoricas/teorica_08/src/ekf_slam.tex
+++ b/teoricas/teorica_08/src/ekf_slam.tex
@@ -1055,8 +1055,8 @@
             0 & 0 & 0 & 0 \cdots 0 & 1 & 0 & 0 \cdots 0 \\
             0 & 0 & 0 & 0 \cdots 0 & 0 & 1 & 0 \cdots 0
             \CodeAfter
-            \UnderBrace{5-4}{5-4}{2j-2}
-            \UnderBrace{5-7}{5-7}{2N-2j}
+            \UnderBrace{5-4}{5-4}{2(j-1)}
+            \UnderBrace{5-7}{5-7}{2(N-j)}
         \end{bNiceMatrix}$ \Comment{Jacobian of state mapping}
         \Statex
         \Statex
