Slides 08: Factor-graph improved

--- a/teoricas/teorica_08/src/graph_slam.tex
+++ b/teoricas/teorica_08/src/graph_slam.tex
@@ -29,7 +29,7 @@
     \note{Information taken from https://youtu.be/uuiaqGLFYa4}
     
     \begin{block}{Factor-Graph}
-    A Factor-graph is a mathematical term, a bipartite graph representing the factorization of a function. This means that we can take a function, for example, $g(.)$ and decompose it by the product of functions $f(.)$,
+    A Factor-graph is a mathematical term, a bipartite graph (Nodes: Variables and Factors and Edges: determine the variables on which the factors depend) representing the factorization of a function. This means that we can take a function, for example, $g(.)$ and decompose it by the product of functions $f(.)$,
     
     \begin{equation*}
     g(X_{1}, \dots, X_{n}) = \prod_{i} f_{i}(S_{i}) \quad \text{con} \quad S_{i} \subseteq \{ X_{1},\dots, X_{n} \}
