--- a/common/latex_preamble.tex
+++ b/common/latex_preamble.tex
@@ -3,7 +3,7 @@
 % Latex packages
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc} % para copiar acentos en español del pdf y permite acentos en las notas
-\usepackage[english]{babel}
+%\usepackage[english]{babel} % commented because lcc.cls load spanish
 \usepackage[per-mode = symbol]{siunitx} % para manejar las unidades
 \usepackage{multimedia} % to add videos with \movie command
 \usepackage{multirow}
