--- a/tps/tp4/tp4.tex
+++ b/tps/tp4/tp4.tex
@@ -7,8 +7,8 @@
 \input{../../common/math_preamble}
 
 \codigo{R-521}
-\materia{Robótica Móvil}
-\titulo{EKF y PF para Localización de un Robot Móvil}
+\materia{Mobile Robotics}
+\titulo{EKF and PF for Localization of a Mobile Robot}
 
 \soluciones
 \commentstrue
@@ -21,66 +21,63 @@
 	\maketitle
 	
 	
-	\section{Introducción}
-	
-	El objetivo del Trabajo Práctico es comprender cómo funciona el Filtro de Kalman Extendido (EKF) y el Filtro de Partículas (PF) para la localización de un robot móvil y desarrollar una implementación de cada uno.
-	
-	Para este trabajo se utilizará el framework de Python provisto por la cátedra. Sin embargo, se alienta a que el trabajo se desarrolle utilizando ROS2 y Gazebo. \footnote{Este trabajo práctico está basado en el Homework 2 del curso CSE571: Probabilistic Robotics of University of Washington - Paul G. Allen School of Computer Science \& Engineering \url{https://courses.cs.washington.edu/courses/cse571/20sp/homeworks/HW2.pdf}.}
-	
-	Material de lectura útil: slides de las clases, Capítulos 3, 4, 5, 7 y 8 del libro Probabilistic Robotics, Thrun, Burgard and Fox.
-	
-	
-	\section{Entrega}
-	\begin{itemize}
-		\item Se debe proveer un repositorio git que contenga el código desarrollado, una imagen docker y un archivo \lstinline{README.md} con las instrucciones de compilación y ejecución.
-		
-		\item Se debe entregar un informe en Lyx o \LaTeX\  explicando el trabajo realizado y analizando los resultados obtenidos.
-	\end{itemize}
+	\section{Introduction}
 
-	
-	\section{Ejercicios Teóricos}
-    
-    \ejercicio Kalman Gain
-    
-    Recordemos que si tenemos dos funciones de densidad de probabilidad Gaussianas:
-    
-    \begin{align*}
-        f(x) &= \mathcal{N}(x;\mu_{1},\sigma_{1}^{2})\\
-        g(x) &= \mathcal{N}(x;\mu_{2},\sigma_{2}^{2})
-    \end{align*}
-%
-    Entonces, su producto es una Gaussiana (a un factor de escala):
-%
-    \begin{equation*}
-        f(x)g(x) \propto \mathcal{N} \left(x; \dfrac{\sigma_{2}^{2}}{\sigma_{1}^{2} + \sigma_{2}^{2}}\mu_{1} + \dfrac{\sigma_{1}^{2}}{\sigma_{1}^{2} + \sigma_{2}^{2}}\mu_{2}, \dfrac{1}{\sigma_{1}^{-2} + \sigma_{2}^{-2}} \right)
-    \end{equation*}
+The objective of the practical work is to understand how the Extended Kalman Filter (EKF) and the Particle Filter (PF) work for localizing a mobile robot and to develop an implementation of each.
 
-    Demuestre que en 1D, el paso de corrección del Filtro de Kalman que se muestra a continuación es equivalente (hasta un factor de escala) a la multiplicación de las Gaussianas del estado predicho ($\mathcal{N}(x;\overline{\mu},\overline{\sigma}^{2})$) y de observación ($\mathcal{N}(x;z, \sigma_{obs}^{2})$) con media y varianza dadas por:
-    
-    \begin{align*}
-        \mu &= \overline{\mu} + K (z - \overline{\mu})\\
-        \sigma^{2} &= (1 - K) \overline{\sigma}^{2}
-    \end{align*}
-%
-    donde 
-    \begin{equation*}
-        K = \dfrac{\overline{\sigma}^{2}}{\overline{\sigma}^{2}+\sigma_{obs}^{2}}.
-    \end{equation*}
-	
-	\ejercicio Jacobiano del Modelo de Movimiento
-    \label{exercise:jacobian}
-    
-    La Figura~\ref{fig:odometry-base-motion-model} describe un modelo de movimiento simple. El estado del robot es su posición y orientación 2D: $s = [x, y, \theta]$. El control del robot es $\controlCommand = [\delta_{rot1}, \delta_{trans}, \delta_{rot2}]$, es decir el robot rota $\delta_{rot1}$, se desplaza $\delta_{trans}$ y luego rota $\delta_{rot2}$.
-    
-    Las ecuaciones para el modelo de movimiento $g$ son las siguientes:
-    
-    \begin{align*}
-        x_{t+1} &= x_{t} + \delta_{trans} \cos(\theta_{t} + \delta_{rot1})\\
-        y_{t+1} &= y_{t} + \delta_{trans} \sin(\theta_{t} + \delta_{rot1})\\
-        \theta_{t+1} &= \theta_{t} + \delta_{rot1} + \delta_{rot2}
-    \end{align*}
+%For this work, the Python framework provided by the chair will be used. However, the work is encouraged to be developed using ROS2 and Gazebo. \footnote{This assignment is based on Homework 2 of the CSE571: Probabilistic Robotics course from the University of Washington - Paul G. Allen School of Computer Science & Engineering \url{https://courses.cs.washington.edu/courses/cse571/20sp/homeworks/HW2.pdf}.}
 
-    donde $s_{t+1} = [x_{t+1}, y_{t+1}, \theta_{t+1}]$ es la predicción del modelo de movimiento. Derivar los Jacobianos de $g$ respecto del estado $\motionModelJacobian = \dfrac{\partial g}{\partial s}$ y el control $\motionModelJacobianControl = \dfrac{\partial g}{\partial \controlCommand}$
+Useful reading materials: lecture slides, Chapters 3, 4, 5, 7, and 8 of the Probabilistic Robotics book, by Thrun, Burgard, and Fox.
+
+\section{Submission}
+\begin{itemize}
+\item A Git repository containing the developed code, a Docker image, and a \lstinline{README.md} file with compilation and execution instructions must be provided.
+
+\item A report must be submitted in Lyx or \LaTeX\ explaining the work performed and analyzing the results obtained. \end{itemize}
+
+\section{Theoretical Exercises}
+
+\ejercicio Kalman Gain 
+
+Recall that if we have two Gaussian probability density functions:
+
+\begin{align*}
+f(x) &= \mathcal{N}(x;\mu_{1},\sigma_{1}^{2})\\
+g(x) &= \mathcal{N}(x;\mu_{2},\sigma_{2}^{2})
+\end{align*}
+%
+Then, their product is a Gaussian (at one scale factor):
+%
+\begin{equation*}
+f(x)g(x) \propto \mathcal{N} \left(x; \dfrac{\sigma_{2}^{2}}{\sigma_{1}^{2} + \sigma_{2}^{2}}\mu_{1} + \dfrac{\sigma_{1}^{2}}{\sigma_{1}^{2} + \sigma_{2}^{2}}\mu_{2}, \dfrac{1}{\sigma_{1}^{-2} + \sigma_{2}^{-2}} \right)
+\end{equation*}
+
+Show that in 1D, the Kalman Filter correction step shown below is equivalent (up to a scale factor) to multiplying the Gaussians of the predicted state ($\mathcal{N}(x;\overline{\mu},\overline{\sigma}^{2})$) and observation ($\mathcal{N}(x;z, \sigma_{obs}^{2})$) with mean and variance given by:
+
+\begin{align*}
+\mu &= \overline{\mu} + K (z - \overline{\mu})\\
+\sigma^{2} &= (1 - K) \overline{\sigma}^{2}
+\end{align*}
+%
+where
+\begin{equation*}
+K = \dfrac{\overline{\sigma}^{2}}{\overline{\sigma}^{2}+\sigma_{obs}^{2}}.
+\end{equation*}
+
+\ejercicio Jacobian Motion Model
+\label{exercise:jacobian}
+
+Figure~\ref{fig:odometry-base-motion-model} describes a simple motion model. The robot state is its 2D position and orientation: $s = [x, y, \theta]$. The robot control is $\controlCommand = [\delta_{rot1}, \delta_{trans}, \delta_{rot2}]$, that is, the robot rotates $\delta_{rot1}$, moves $\delta_{trans}$, and then rotates $\delta_{rot2}$.
+
+The equations for the motion model $g$ are as follows:
+
+\begin{align*}
+x_{t+1} &= x_{t} + \delta_{trans} \cos(\theta_{t} + \delta_{rot1})\\
+y_{t+1} &= y_{t} + \delta_{trans} \sin(\theta_{t} + \delta_{rot1})\\
+\theta_{t+1} &= \theta_{t} + \delta_{rot1} + \delta_{rot2}
+\end{align*}
+
+where $s_{t+1} = [x_{t+1}, y_{t+1}, \theta_{t+1}]$ is the prediction of the motion model. Derive the Jacobians of $g$ with respect to the state $\motionModelJacobian = \dfrac{\partial g}{\partial s}$ and the control $\motionModelJacobianControl = \dfrac{\partial g}{\partial \controlCommand}$
     
     \noindent
     \begin{minipage}[t]{.5\textwidth}
@@ -105,77 +102,75 @@
     \end{minipage}
     
 	
-	\section{Ejercicios de Programación}
-		
-	Implementar un Filtro de Kalman Extendido (EKF) y un Filtro de Partículas (PF) para localizar un robot utilizando \emph{landmarks}. Usaremos el modelo de movimiento basado en la odometría que se derivó previamente. Asumimos que hay landmarks presentes en el entorno del robot. El robot recibe los ángulos (\emph{bearing}) a los landmarks y los ID de los landmarks como observaciones: (orientación, ID de landmark).
-	
-	Asumimos un modelo de ruido para el modelo de movimiento de odometría con parámetro $\alpha$ (ver Libro Probabilisitc Robotics Tabla 5.6) y un modelo de ruido separado para las observaciones de ángulo con parámetro $\beta$ (ver Libro Probabilisitc Robotics Sección 6.6). El ID del landmark en las observaciones es sin ruido. Consulte el código provisto para obtener detalles de implementación.
-	
-	En cada paso de tiempo, el robot comienza desde el estado actual y se mueve de acuerdo con la entrada de control. El robot luego recibe una observación del mundo. Utilizar esta información para localizar el robot sobre la secuencia de tiempo completa con un EKF y PF.
-	
-	\begin{figure}[!htbp]
-		\centering
-		\includegraphics[width=0.5\textwidth]{./images/odometry_as_controls.pdf}
-        \caption{Modelo de movimiento.}
-		\label{fig:odometry-base-motion-model}
-	\end{figure}
+\section{Programming Exercises}
 
-	\subsection{Descripción del código}
-	
-	El código provisto está escrito en Python y depende de las librerías \lstinline[style=bash]{NumPy} y \lstinline[style=bash]{Matplotlib}.
-	
-	\begin{itemize}
-		\item \lstinline[style=bash]{localization.py} --- principal punto de entrada para ejecutar experimentos.
-		\item \lstinline[style=bash]{soccer_field.py} --- implementa las funciones del modelo dinámico y de observación, así como los modelos de ruido para ambos. ¡Implementar los jacobianos acá!
-		\item \lstinline[style=bash]{utils.py} --- contiene varias funciones de ploteo, así como una función útil para normalizar un ángulo entre $[-\pi, \pi]$.
-		\item \lstinline[style=bash]{policy.py} --- contiene una política simple que puede ignorar sin problemas.
-		\item \lstinline[style=bash]{ekf.py} --- ¡Implementar acá el Filtro de Kalman Extendido!
-		\item \lstinline[style=bash]{pf.py} --- ¡Implementar acá el Filtro Partículas!
-	\end{itemize}
+Implement an Extended Kalman Filter (EKF) and a Particle Filter (PF) to localize a robot using \emph{landmarks}. We will use the odometry-based motion model derived previously. We assume landmarks are present in the robot's environment. The robot receives the angles (\emph{bearing}) to the landmarks and the landmark IDs as observations: (orientation, landmark ID).
 
-	\subsection{Interfaz de comando}
+We assume a noise model for the odometry motion model with parameter $\alpha$ (see Probabilisitc Robotics Book Table 5.6) and a separate noise model for the angle observations with parameter $\beta$ (see Probabilisitc Robotics Book Section 6.6). The landmark ID in the observations is noise-free. See the provided code for implementation details.
 
-	Para visualizar el robot en el entorno del campo de fútbol, ejecute
+At each time step, the robot starts from the current state and moves according to the control input. The robot then receives an observation of the world. This information is used to localize the robot over the entire time sequence with an EKF and PF.
 
-\begin{lstlisting}[style=bash] 
+\begin{figure}[!htbp]
+\centering
+\includegraphics[width=0.5\textwidth]{./images/odometry_as_controls.pdf}
+\caption{Motion model}
+\label{fig:odometry-base-motion-model}
+\end{figure}
+
+\subsection{Code description}
+
+The provided code is written in Python and depends on the \lstinline[style=bash]{NumPy} and \lstinline[style=bash]{Matplotlib} libraries.
+
+\begin{itemize}
+\item \lstinline[style=bash]{localization.py} --- main entry point for running experiments.
+\item \lstinline[style=bash]{soccer_field.py} --- Implements the dynamic and observation model functions, as well as the noise models for both. Implement Jacobians here!
+\item \lstinline[style=bash]{utils.py} --- Contains several plotting functions, as well as a useful function for normalizing an angle between $[-\pi, \pi]$.
+\item \lstinline[style=bash]{policy.py} --- Contains a simple policy that you can safely ignore.
+\item \lstinline[style=bash]{ekf.py} --- Implement the Extended Kalman Filter here!
+\item \lstinline[style=bash]{pf.py} --- Implement the Particle Filter here!
+\end{itemize}
+
+\subsection{Command Interface}
+
+To visualize the robot in the soccer field environment, run
+
+\begin{lstlisting}[style=bash]
 python localization.py --plot none
 \end{lstlisting}
 
+The {\color{blue}} line plots the robot's position (ground-truth), which is the result of noisy actions. The {\color{green}} line plots the robot's position assuming the actions are not noisy (desired trajectory, but not the actual one). After implementing a filter, the robot's position estimated by the filter will be plotted in {\color{red}}.
 
-	La línea {\color{blue} azul} traza la posición del robot (ground-truth), que es el resultado de acciones ruidosas. La línea {\color{green} verde} traza la posición del robot asumiendo que las acciones no son ruidosas (trayectoria deseada pero no la real). Después de implementar un filtro, la posición del robot estimada por el filtro se dibujará en {\color{red} rojo}.
-	
-	
-\begin{lstlisting}[style=bash] 
+\begin{lstlisting}[style=bash]
 python localization.py --plot ekf
 python localization.py --plot pf
 \end{lstlisting}
 
-	Para ver los flags de la línea de comandos disponibles, ejecute
+To see the available command-line flags, run
 
-\begin{lstlisting}[style=bash] 
+\begin{lstlisting}[style=bash]
 python localization.py -h
 \end{lstlisting}
 
-	\subsection{Formato de los datos}
+\subsection{Data Format}
 
-	\begin{itemize}
-		\item estado: $[x,y,\theta]$
-		\item control: $[\delta_{rot1},\delta_{trans},\delta_{rot2}]$
-		\item observación: $[\theta_{bearing}]$
-	\end{itemize}
-	
-	\subsection{Notas}
-	\begin{itemize}
-		\item Llamar a \lstinline[style=bash]{utils.minimized_angle} cada vez que un ángulo o una diferencia de ángulo pueda exceder $[-\pi, \pi]$.
-		\item Utilizar el muestreador sistemático de baja varianza visto en clase. Da una distribución más suave de partículas y también requiere un único número aleatorio por paso de remuestreo.
-		\item Desactivar la visualización para acelerar la ejecución.
-	\end{itemize}
+\begin{itemize}
+\item state: $[x,y,\theta]$
+\item control: $[\delta_{rot1},\delta_{trans},\delta_{rot2}]$
+\item observation: $[\theta_{bearing}]$
+\end{itemize}
 
-	\ejercicio Implementar EKF
-    
-	Implementar el algoritmo de Filtro de Kalman Extendido en \lstinline[style=bash]{ekf.py}. Deberá completar \lstinline[style=bash]{ExtendedKalmanFilter.update} y los métodos $G$, $V$ y $H$. Los resultados de una implementación exitosa de EKF deben ser comparables a los siguientes resultados.
+\subsection{Notes}
+\begin{itemize}
+\item Call \lstinline[style=bash]{utils.minimized_angle} whenever an angle or angle difference might exceed $[-\pi, \pi]$.
+\item Use the low-variance systematic sampler seen in class. It gives a smoother particle distribution and also requires a single random number per resampling step.
+\item Disable visualization to speed up execution.
+\end{itemize}
 
-\begin{lstlisting}[style=bash] 
+\ejercicio Implementing EKF
+
+Implement the Extended Kalman Filter algorithm in \lstinline[style=bash]{ekf.py}. You will need to complete \lstinline[style=bash]{ExtendedKalmanFilter.update} and the $G$, $V$, and $H$ methods. The results of a successful EKF implementation should be comparable to the following results.
+
+\begin{lstlisting}[style=bash]
 python localization.py ekf --seed 0
 ...
 Mean position error: 8.9983675360847
@@ -183,26 +178,24 @@ Mean Mahalanobis error: 4.416418248584298
 ANEES: 1.472139416194766
 \end{lstlisting}
 
-
 	\begin{enumerate}
-		\item Graficar el camino del robot real y el camino estimado por el filtro con los parámetros predeterminados (proporcionados).
-		\item  Graficar el error de posición medio a medida que los factores $\alpha$ y $\beta$ varían sobre $r = [1/64, 1/16, 1/4, 4, 16, 64]$\footnote{Dado que los factores se multiplican con varianzas, esto es entre 1/8 y 8 veces los valores de ruido predeterminados.} y analizar los resultados obtenidos.
-		
-		Ejecutar 10 ensayos por valor de $r$. Una ejecución podría ser algo como:
+\item Plot the actual robot path and the path estimated by the filter with the default parameters (provided).
+\item Plot the mean position error as the factors $\alpha$ and $\beta$ vary over $r = [1/64, 1/16, 1/4, 4, 16, 64]$\footnote{Since the factors multiply with variances, this is between 1/8 and 8 times the default noise values.} and analyze the results obtained.
 
-\begin{lstlisting}[style=bash] 
+Run 10 trials per value of $r$. An execution might look something like this:
+
+\begin{lstlisting}[style=bash]
 python localization.py ekf --data-factor 4 --filter-factor 4
 \end{lstlisting}
 
-		\item Graficar el error de posición medio y ANEES (\emph{average normalized estimation error squared}) a medida que los factores $\alpha$, $\beta$ del filtro varían sobre $r$ (como arriba) mientras los datos son generados con los valores por defecto. Analizar los resultados obtenidos.
-	\end{enumerate}
+\item Plot the mean position error and ANEES (\emph{average normalized estimation error squared}) as the filter factors $\alpha$, $\beta$ vary over $r$ (as above) while the data is generated with the default values. Analyze the results.
+\end{enumerate}
 
+\ejercicio Implementing PF
 
-	\ejercicio Implementar PF
-	
-	Implementar el algoritmo de Filtro de Partículas en \lstinline[style=bash]{pf.py}. Se debe completar \lstinline[style=bash]{ParticleFilter.update} y \lstinline[style=bash]{ParticleFilter.resample}.
+Implement the Particle Filter algorithm in \lstinline[style=bash]{pf.py}. You must complete \lstinline[style=bash]{ParticleFilter.update} and \lstinline[style=bash]{ParticleFilter.resample}.
 
-\begin{lstlisting}[style=bash] 
+\begin{lstlisting}[style=bash]
 python localization.py pf --seed 0
 ...
 Mean position error: 8.567264372950905
@@ -210,13 +203,12 @@ Mean Mahalanobis error: 14.742252771106532
 ANEES: 4.914084257035511
 \end{lstlisting}
 
-	\begin{enumerate}
-		\item Graficar el camino del robot real y el camino estimado por el filtro con los parámetros predeterminados.
-		\item Graficar el error de posición medio a medida que los factores $\alpha$, $\beta$ varían sobre $r$ y discuta los resultados.
-		\item Graficar el error de posición medio y ANEES a medida que los factores $\alpha$, $\beta$ del filtro varían sobre $r$ mientras los datos son generados con los valores por defecto.
-		\item Graficar el error de posición medio y ANEES a medida que los factores $\alpha$, $\beta$ varían sobre $r$ y el número de partículas varía sobre $[20, 50, 500]$.
-	\end{enumerate}
-
+\begin{enumerate}
+\item Plot the actual robot path and the path estimated by the filter with the default parameters.
+\item Plot the mean position error as the factors $\alpha$, $\beta$ vary over $r$ and discuss the results.
+\item Plot the mean position error and ANEES as the filter factors $\alpha$, $\beta$ vary over $r$ while the data is generated with the default values.
+\item Plot the mean position error and ANEES as the factors $\alpha$, $\beta$ vary over $r$ and the number of particles varies over $[20, 50, 500]$.
+\end{enumerate}
 
 	\printbibliography
 	
