--- a/tps/parcial/parcial.tex
+++ b/tps/parcial/parcial.tex
@@ -1,4 +1,4 @@
-\documentclass[parcial]{lcc}
+\documentclass[final]{lcc}
 
 % add latex preamble
 \input{../../common/latex_preamble}
@@ -8,7 +8,7 @@
 
 \codigo{R-521}
 \materia{Robótica Móvil}
-\titulo{Parcial}
+\titulo{Probabilistic Robotics}
 
 \soluciones
 \commentstrue
