Minor changes on exam

--- a/tps/exam/exam.tex
+++ b/tps/exam/exam.tex
@@ -26,7 +26,7 @@
 
 %\ejercicio Explique el comportamiento de la matriz de covarianza en las etapas de predicción y corrección de EKF?
 
-\ejercicio In the Practical Assignment, where and why did you apply the \lstinline[style=python]{utils.minimized\_angle()} function ?
+\ejercicio In the Practical Assignment, where and why did you apply the \lstinline[style=python]{utils.minimized_angle()} function ?
 
 %\ejercicio What is the meaning of the covariance matrix?
 
